# graysoft-media-center

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/: English.nsh  installer-hooks.nsh
src-tauri/migrations/: 001_init.sql  002_loaded_models.sql  003_schema_version.sql  004_collections.sql  005_drop_comfy.sql
src-tauri/python/: bootstrap.py  catalog_downloader.py  engine.py  hf_catalog.py  model_registry.json  requirements-lock.txt  runtime_deps.py  setup_model.py  thumb_util.py
src-tauri/python/pipelines/: __init__.py  cogvideox.py  cuda_memory.py  flux_dev.py  flux_schnell.py  gguf_loader.py  hf_cache.py  hunyuan_video.py  ltx_video_2.py  model_loader.py  pipeline_cache.py  pipeline_helpers.py  registry_dispatch.py  sd_1_5.py  sdxl_base.py  stable_video_diffusion.py  wan_2_1.py  z_image_turbo.py
src-tauri/schemas/: cogvideox.json  flux-dev.json  flux-schnell.json  hunyuan-video.json  ltx-video-2.json  model_catalog.json  registry.json  sd-1-5.json  sdxl-base.json  stable-video-diffusion.json  wan-2.1.json  wan-2.2-5b.json  wan-2.2.json  z-image-turbo.json
src-tauri/src/: commands.rs  lib.rs  logging.rs  main.rs  settings.rs  state.rs
src-tauri/src/gallery/: files.rs  mod.rs  store.rs
src-tauri/src/inference/: engine.rs  mod.rs  model_manager.rs  params.rs  python_runtime.rs
src-tauri/src/jobs/: mod.rs  queue.rs  worker.rs
src-tauri/src/models/: catalog.rs  loaded.rs  (+4 more)
(+39 files in other folders)
